--- a/4. CustomControls/app/src/main/AndroidManifest.xml
+++ b/4. CustomControls/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="kr.ac.kpu.game.s2015182003.pairgame">
+    package="kr.ac.kpu.game.s2015182003.customcontrols">
 
     <application
         android:allowBackup="true"
@@ -8,9 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.PairGame">
-        <activity android:name="kr.ac.kpu.game.s2015182003.pairgame.MainActivity"
-            android:configChanges="orientation">
+        android:theme="@style/Theme.CustomControls">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
