--- a/5. SampleGame/app/src/main/AndroidManifest.xml
+++ b/5. SampleGame/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="kr.ac.kpu.game.s2015182003.customcontrols">
+    package="kr.ac.kpu.game.s2015182003.samplegame">
 
     <application
         android:allowBackup="true"
@@ -8,8 +8,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CustomControls">
-        <activity android:name=".MainActivity" android:configChanges="orientation|screenSize">
+        android:theme="@style/Theme.SampleGame">
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
