--- a/TermProject/app/src/main/AndroidManifest.xml
+++ b/TermProject/app/src/main/AndroidManifest.xml
@@ -9,8 +9,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar">
-        <activity android:name=".PlayActivity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.RankingActivity"></activity>
+        <activity android:name=".activity.PlayActivity" />
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
